--- a/styles/font.css
+++ b/styles/font.css
@@ -31,42 +31,48 @@
   font-family: "Visby-Extrabold";
   font-style: normal;
   font-weight: 800;
-  src: local("Visby Extrabold"), url("../assets/fonts/VisbyExtrabold.woff") format("woff");
+  src: local("Visby Extrabold"),
+    url("../assets/fonts/VisbyExtrabold.woff") format("woff");
 }
 
 @font-face {
   font-family: "Visby-HeavyItalic";
   font-style: italic;
   font-weight: 900;
-  src: local("Visby Heavy Italic"), url("../assets/fonts/VisbyHeavy Italic.woff") format("woff");
+  src: local("Visby Heavy Italic"),
+    url("../assets/fonts/VisbyHeavy Italic.woff") format("woff");
 }
 
 @font-face {
   font-family: "Visby-Heavy";
   font-style: normal;
   font-weight: 900;
-  src: local("Visby Heavy"), url("../assets/fonts/VisbyHeavy.woff") format("woff");
+  src: local("Visby Heavy"),
+    url("../assets/fonts/VisbyHeavy.woff") format("woff");
 }
 
 @font-face {
   font-family: "Visby-Italic";
   font-style: italic;
   font-weight: 400;
-  src: local("Visby Italic"), url("../assets/fonts/VisbyItalic.woff") format("woff");
+  src: local("Visby Italic"),
+    url("../assets/fonts/VisbyItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: "Visby-LightItalic";
   font-style: italic;
   font-weight: 300;
-  src: local("Visby Light Italic"), url("../assets/fonts/VisbyLight Italic.woff") format("woff");
+  src: local("Visby Light Italic"),
+    url("../assets/fonts/VisbyLight Italic.woff") format("woff");
 }
 
 @font-face {
   font-family: "Visby-Light";
   font-style: normal;
   font-weight: 300;
-  src: local("Visby Light"), url("../assets/fonts/VisbyLight.woff") format("woff");
+  src: local("Visby Light"),
+    url("../assets/fonts/VisbyLight.woff") format("woff");
 }
 
 @font-face {
@@ -81,7 +87,8 @@
   font-family: "Visby-Medium";
   font-style: normal;
   font-weight: 500;
-  src: local("Visby Medium"), url("../assets/fonts/VisbyMedium.woff") format("woff");
+  src: local("Visby Medium"),
+    url("../assets/fonts/VisbyMedium.woff") format("woff");
 }
 
 @font-face {
@@ -96,14 +103,16 @@
   font-family: "Visby-Semibold";
   font-style: normal;
   font-weight: 600;
-  src: local("Visby Semibold"), url("../assets/fonts/VisbySemibold.woff") format("woff");
+  src: local("Visby Semibold"),
+    url("../assets/fonts/VisbySemibold.woff") format("woff");
 }
 
 @font-face {
   font-family: "Visby-ThinItalic";
   font-style: italic;
   font-weight: 100;
-  src: local("Visby Thin Italic"), url("../assets/fonts/VisbyThin Italic.woff") format("woff");
+  src: local("Visby Thin Italic"),
+    url("../assets/fonts/VisbyThin Italic.woff") format("woff");
 }
 
 @font-face {
@@ -111,4 +120,9 @@
   font-style: normal;
   font-weight: 100;
   src: local("Visby Thin"), url("../assets/fonts/VisbyThin.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roxborough";
+  src: url("../assets/fonts/Roxborough\ CF.ttf");
 }
