--- a/styles/global.css
+++ b/styles/global.css
@@ -1,22 +1,28 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    min-height: 100%;
-    min-width: 100%;
-    display: flex;
-    flex-direction: column;
+  min-height: 100%;
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
-    cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+input:focus {
+  outline: none;
 }
