--- a/styles/global.css
+++ b/styles/global.css
@@ -6,11 +6,12 @@
 }
 
 body {
-  min-height: 100%;
-  min-width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background-color: #F8FBFA;
+  position: relative;
+  overflow-x: hidden;
 }
 
 a {
